# pdf-extractext

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  makefile  pdf_manager.db  pyproject.toml  skills-lock.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.infra/: docker-compose.infra.yml
.infra/certs/: README.md
.infra/config/: config.yml  traefik.yml
dev/: cli.py  config.py  database.py  main.py  models.py
dev/client/: __init__.py  cli.py
dev/controllers/: __init__.py
dev/models/: __init__.py  pdf_document.py
dev/servers/: __init__.py  app.py  main.py
dev/servers/controllers/: __init__.py  pdf_controller.py
dev/servers/models/: database.py  pdf_document.py
dev/servers/services/: __init__.py  pdf_extractor.py  pdf_validator.py
dev/servers/views/: __init__.py  pdf_router.py
dev/test/: conftest.py  test_api.py  test_config.py  test_models.py
docs/: diagrama_clases.puml  diagrama_secuencia.puml  infograma.puml
test/: conftest.py  test_api.py  test_cli.py  test_config.py  test_models.py  test_pdf_extractor.py
test/integration/: test_api.py  test_cli.py
test/unit/: test_config.py  test_main_entry_point.py  test_models.py  test_pdf_extractor.py
uploads/: sample.txt  sample2_pypdf.txt
