[project]
name = "pdf-manager"
version = "1.0.0"
description = "API para gestión de documentos PDF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.3.0",
    "beanie>=1.25.0",
    "pymongo>=4.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pypdf2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
