[project]
name = "pdf-manager"
version = "0.1.0"
description = "API para gestión de documentos PDF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.3.0",
    "beanie>=1.25.0",
    "pymongo>=4.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pypdf2>=3.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[project.scripts]
fast-pdf = "dev.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dev"]

[tool.pytest.ini_options]
testpaths = ["test"]
